--- a/example/android/app/src/main/res/values/strings.xml
+++ b/example/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Red5ProVideoView</string>
+        <string name="app_name">Red5ProMultiStreamView</string>
 </resources>
